projects/vb6parse/snapshots/parsers/cst/declarations/mod_declarations/multiple_event_declarations.snap
---
source: projects/vb6parse/tests/declarations/mod_declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: EventStatement
      children:
        - kind: EventKeyword
          text: Event
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Click
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: EventStatement
      children:
        - kind: EventKeyword
          text: Event
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: DblClick
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
